Fixed data on index.html

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
             <a href="#">
               <img
                 class="mode-img"
-                src="../images/icons/email-light.png"
+                src="./images/icons/email-light.png"
                 alt="Email icon"
-                data-light="../images/icons/email-light.png"
-                data-dark="../images/icons/email-dark.png" />Newsletter
+                data-light="./images/icons/email-light.png"
+                data-dark="./images/icons/email-dark.png" />Newsletter
             </a>
           </li>
           <li id="english">
             <a href="#">
               <img
                 class="mode-img"
-                src="../images/icons/language-light.png"
-                data-light="../images/icons/language-light.png"
-                data-dark="../images/icons/language-dark.png"
+                src="./images/icons/language-light.png"
+                data-light="./images/icons/language-light.png"
+                data-dark="./images/icons/language-dark.png"
                 alt="Language icon" />English
             </a>
           </li>
@@ -53,19 +53,19 @@
             <a href="#">
               <img
                 class="mode-img"
-                src="../images/icons/search-light.png"
+                src="./images/icons/search-light.png"
                 alt="Search icon"
-                data-light="../images/icons/search-light.png"
-                data-dark="../images/icons/search-dark.png" />Search
+                data-light="./images/icons/search-light.png"
+                data-dark="./images/icons/search-dark.png" />Search
             </a>
           </li>
           <li>
             <a id="lightMode" aria-label="Toggle Theme">
               <img
                 class="mode-img"
-                src="../images/icons/light.png"
-                data-light="../images/icons/light.png"
-                data-dark="../images/icons/moon.png"
+                src="./images/icons/light.png"
+                data-light="./images/icons/light.png"
+                data-dark="./images/icons/moon.png"
                 alt="Light logo"
             /></a>
           </li>
@@ -141,10 +141,10 @@
           <a href="tel:+4791234567" aria-label="Phone number to Craftsvilla">
             <img
               class="mode-img"
-              src="../images/icons/phone-light.png"
+              src="./images/icons/phone-light.png"
               alt="Phone icon"
-              data-light="../images/icons/phone-light.png"
-              data-dark="../images/icons/phone-dark.png" />+47 912 34 567
+              data-light="./images/icons/phone-light.png"
+              data-dark="./images/icons/phone-dark.png" />+47 912 34 567
           </a>
         </li>
         <li>
@@ -153,9 +153,9 @@
             aria-label="Craftsvilla phone number">
             <img
               class="mode-img"
-              src="../images/icons/email-light.png"
-              data-light="../images/icons/email-light.png"
-              data-dark="../images/icons/email-dark.png"
+              src="./images/icons/email-light.png"
+              data-light="./images/icons/email-light.png"
+              data-dark="./images/icons/email-dark.png"
               alt="Email icon" />contact@craftsvilla.no
           </a>
         </li>
@@ -165,10 +165,10 @@
             aria-label="Craftsvilla instagram account">
             <img
               class="mode-img"
-              src="../images/icons/instagram-light.png"
+              src="./images/icons/instagram-light.png"
               alt="Instagram icon"
-              data-light="../images/icons/instagram-light.png"
-              data-dark="../images/icons/instagram-dark.png" />
+              data-light="./images/icons/instagram-light.png"
+              data-dark="./images/icons/instagram-dark.png" />
           </a>
         </li>
         <li>
@@ -177,10 +177,10 @@
             aria-label="Craftsvilla facebook account">
             <img
               class="mode-img"
-              src="../images/icons/facebook-light.png"
+              src="./images/icons/facebook-light.png"
               alt="Facebook icon"
-              data-light="../images/icons/facebook-light.png"
-              data-dark="../images/icons/facebook-dark.png" />
+              data-light="./images/icons/facebook-light.png"
+              data-dark="./images/icons/facebook-dark.png" />
           </a>
         </li>
         <li>
@@ -189,10 +189,10 @@
             aria-label="Craftsvilla twitter account">
             <img
               class="mode-img"
-              src="../images/icons/twitter-light.png"
+              src="./images/icons/twitter-light.png"
               alt="Twitter icon"
-              data-light="../images/icons/twitter-light.png"
-              data-dark="../images/icons/twitter-dark.png" />
+              data-light="./images/icons/twitter-light.png"
+              data-dark="./images/icons/twitter-dark.png" />
           </a>
         </li>
         <li>
